force-app/main/default/objects/inspire1__Project__c/inspire1__Project__c.object-meta.xml
<CustomObject>
    <description>Inspire Planner - This object captures the detail of the project record</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>