force-app/main/default/objects/inspire1__Project__c/fields/Active_COI_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_COI_Count__c</fullName>
    <label>Active COI Count</label>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.Has_Active_COI__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>inspire1__Project_Tasks__c.inspire1__Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>