force-app/main/default/objects/inspire1__Project__c/fields/Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Date__c</fullName>
    <description>This field shows the date when the audit is finished. This field is controlled through the &quot;Actual finish date&quot; of the task that has &quot;Task Category&quot; = &quot;Conduct Audit&quot;.</description>
    <inlineHelpText>This field shows the date when the audit is finished. This field is controlled through the &quot;Actual finish date&quot; of the task that has &quot;Task Category&quot; = &quot;Conduct Audit&quot;.</inlineHelpText>
    <label>Audit Date</label>
    <type>Date</type>
</CustomField>