force-app/main/default/objects/inspire1__Project__c/fields/Audit_Session_Status__c.field-meta.xml
<CustomField>
    <fullName>Audit_Session_Status__c</fullName>
    <label>Audit Session Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelling Certificate</fullName>
            </value>
            <value>
                <fullName>Current-Active</fullName>
            </value>
            <value>
                <fullName>Done-Archive</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>New-Active</fullName>
            </value>
            <value>
                <fullName>Transfer-Active</fullName>
            </value>
            <value>
                <fullName>Transfer Out</fullName>
            </value>
            <value>
                <fullName>1. Dormant</fullName>
                <isActive>false</isActive>
                <label>1. Dormant</label>
            </value>
            <value>
                <fullName>2.1 Current-Active</fullName>
                <isActive>false</isActive>
                <label>2.1 Current-Active</label>
            </value>
            <value>
                <fullName>2.2 New-Active</fullName>
                <isActive>false</isActive>
                <label>2.2 New-Active</label>
            </value>
            <value>
                <fullName>2.3 Transfer-Active</fullName>
                <isActive>false</isActive>
                <label>2.3 Transfer-Active</label>
            </value>
            <value>
                <fullName>3. Done-Archive</fullName>
                <isActive>false</isActive>
                <label>3. Done-Archive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>