force-app/main/default/objects/inspire1__Project__c/fields/Audit_too_far_before_cert_exp__c.field-meta.xml
<CustomField>
    <fullName>Audit_too_far_before_cert_exp__c</fullName>
    <formula>IF(
				AND( 
								NOT(ISBLANK(Certificate_Expiry_Date__c)),
				    NOT(ISBLANK(Audit_Date__c))
				),
    Certificate_Expiry_Date__c -  Audit_Date__c,
				null
				)</formula>
    <label>Audit too far before cert exp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>