force-app/main/default/objects/inspire1__Project__c/fields/Certificate_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Decision_Date__c</fullName>
    <description>This field will show the date when the certificate-related decision will be taken.</description>
    <inlineHelpText>This field will show the date when the certificate-related decision will be taken.</inlineHelpText>
    <label>Certificate Decision Date</label>
    <type>Date</type>
</CustomField>