force-app/main/default/objects/inspire1__Project__c/fields/Certificate_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Expiry_Date__c</fullName>
    <label>Certificate Expiry Date</label>
    <type>Date</type>
</CustomField>