force-app/main/default/objects/inspire1__Project__c/fields/Current_Audit_Session__c.field-meta.xml
<CustomField>
    <fullName>Current_Audit_Session__c</fullName>
    <label>Current Audit Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IC 1</fullName>
            </value>
            <value>
                <fullName>Mock</fullName>
            </value>
            <value>
                <fullName>ASA 1</fullName>
            </value>
            <value>
                <fullName>ASA 2</fullName>
            </value>
            <value>
                <fullName>ASA 3</fullName>
            </value>
            <value>
                <fullName>ASA 4</fullName>
            </value>
            <value>
                <fullName>ASA 11</fullName>
            </value>
            <value>
                <fullName>ASA 12</fullName>
            </value>
            <value>
                <fullName>ASA 13</fullName>
            </value>
            <value>
                <fullName>ASA 14</fullName>
            </value>
            <value>
                <fullName>ASA 21</fullName>
            </value>
            <value>
                <fullName>ASA 22</fullName>
            </value>
            <value>
                <fullName>ASA 23</fullName>
            </value>
            <value>
                <fullName>ASA 24</fullName>
            </value>
            <value>
                <fullName>ASA 31</fullName>
            </value>
            <value>
                <fullName>ASA 32</fullName>
            </value>
            <value>
                <fullName>ASA 33</fullName>
            </value>
            <value>
                <fullName>ASA 34</fullName>
            </value>
            <value>
                <fullName>ASA 41</fullName>
            </value>
            <value>
                <fullName>ASA 42</fullName>
            </value>
            <value>
                <fullName>ASA 43</fullName>
            </value>
            <value>
                <fullName>ASA 44</fullName>
            </value>
            <value>
                <fullName>ASA 51</fullName>
            </value>
            <value>
                <fullName>ASA 52</fullName>
            </value>
            <value>
                <fullName>ASA 53</fullName>
            </value>
            <value>
                <fullName>ASA 54</fullName>
            </value>
            <value>
                <fullName>ASA 61</fullName>
            </value>
            <value>
                <fullName>ASA 62</fullName>
            </value>
            <value>
                <fullName>ASA 63</fullName>
            </value>
            <value>
                <fullName>ASA 64</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>