force-app/main/default/objects/inspire1__Project__c/fields/Date_NCs_closed__c.field-meta.xml
<CustomField>
    <fullName>Date_NCs_closed__c</fullName>
    <description>This field shows the latest &quot;CAP End Date&quot; when all the existing CAPs records are either &quot;Resolved&quot; or &quot;Closed on Contingency&quot;.</description>
    <inlineHelpText>This field shows the latest &quot;CAP End Date&quot; when all the existing CAPs records are either &quot;Resolved&quot; or &quot;Closed on Contingency&quot;.</inlineHelpText>
    <label>Date NCs closed</label>
    <type>Date</type>
</CustomField>