force-app/main/default/objects/inspire1__Project__c/fields/Days_From_Audit_To_Cert_Decision__c.field-meta.xml
<CustomField>
    <fullName>Days_From_Audit_To_Cert_Decision__c</fullName>
    <label>Days From Audit To Cert Decision</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>