force-app/main/default/objects/inspire1__Project__c/fields/DaysUntilDue__c.field-meta.xml
<CustomField>
    <fullName>DaysUntilDue__c</fullName>
    <label>Days Until Due</label>
    <length>5</length>
    <type>Text</type>
</CustomField>