force-app/main/default/objects/inspire1__Project__c/fields/Deadline_for_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Deadline_for_Resolution__c</fullName>
    <label>Deadline for Resolution</label>
    <type>Date</type>
</CustomField>