force-app/main/default/objects/inspire1__Project__c/fields/DMS_User__c.field-meta.xml
<CustomField>
    <fullName>DMS_User__c</fullName>
    <label>DMS User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>