force-app/main/default/objects/inspire1__Project__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>If “Audit Date“ is null/not populated, “Due Date“ should also be null/empty.

If “Audit Date“ has a value &amp;&amp; If “Date NCs Closed“ is null

      Then “Due Date“ should be “Audit Date“ + 28.

If “Audit Date“ has a value &amp;&amp; If “Date NCs Closed“ has a value

       Then “Due Date“ should be “Date NCs Closed“ + 28.</description>
    <inlineHelpText>If “Audit Date“ is null/not populated, “Due Date“ should also be null/empty.
If “Audit Date“ has a value &amp;&amp; If “Date NCs Closed“ is null
      Then “Due Date“ should be “Audit Date“ + 28.
If “Audit Date“ has a value &amp;&amp; If “Date NCs Closed“ has a value
       Then “Due Date“ should be “Date NCs Closed“ + 28.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>