force-app/main/default/objects/inspire1__Project__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <formula>IF(
	ISBLANK(Audit_Date__c),
	null,
	IF(
		AND(
			NOT(ISBLANK(Audit_Date__c)),  
			ISBLANK(Date_NCs_closed__c)
		),
		Audit_Date__c + 28,
		IF(
			AND(
				NOT(ISBLANK(Audit_Date__c)),  
				NOT(ISBLANK(Date_NCs_closed__c))
			),
			Date_NCs_closed__c + 28,
			null
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>