force-app/main/default/objects/inspire1__Project__c/fields/Expense_Margin__c.field-meta.xml
<CustomField>
    <fullName>Expense_Margin__c</fullName>
    <inlineHelpText>As per defined on the program during project creation</inlineHelpText>
    <label>Expense Margin %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>