force-app/main/default/objects/inspire1__Project__c/fields/Fair_Trade_USA_Audit_Id__c.field-meta.xml
<CustomField>
    <fullName>Fair_Trade_USA_Audit_Id__c</fullName>
    <label>Audit Report Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>