force-app/main/default/objects/inspire1__Project__c/fields/Final_RPT_Uploaded_in_SEDEX_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_RPT_Uploaded_in_SEDEX_Date__c</fullName>
    <label>Final RPT Uploaded in SEDEX Date</label>
    <type>Date</type>
</CustomField>