force-app/main/default/objects/inspire1__Project__c/fields/InitialReportedDate__c.field-meta.xml
<CustomField>
    <fullName>InitialReportedDate__c</fullName>
    <label>Initial Reported Date</label>
    <type>Date</type>
</CustomField>