force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Account__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account the project is related to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>