force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Actual_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Actual_Finish_Date__c</fullName>
    <description>Defines the actual date the project finished.  This is represented by the last task finish date.</description>
    <inlineHelpText>Defines the actual date the project finished.  This is represented by the last task finish date.</inlineHelpText>
    <label>Finish Date</label>
    <summarizedField>inspire1__Project_Tasks__c.inspire1__Finish_Date__c</summarizedField>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Time_Tracking_Only__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryForeignKey>inspire1__Project_Tasks__c.inspire1__Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>