force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Baseline_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Baseline_Finish_Date__c</fullName>
    <description>Defines the original planned finish date of project.</description>
    <inlineHelpText>Defines the original planned finish date of project.</inlineHelpText>
    <label>Baseline Finish Date</label>
    <type>Date</type>
</CustomField>