force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Baseline_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Baseline_Start_Date__c</fullName>
    <description>Defines the original planned start date of project.</description>
    <inlineHelpText>Defines the original planned start date of project.</inlineHelpText>
    <label>Baseline Start Date</label>
    <type>Date</type>
</CustomField>