force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Budget__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Budget__c</fullName>
    <description>Captures health of project budget.</description>
    <inlineHelpText>Define health of project budget.</inlineHelpText>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>inspire1__Status_Indicators</valueSetName>
    </valueSet>
</CustomField>