force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Budget_Comments__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Budget_Comments__c</fullName>
    <label>Budget Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>