force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Budget_Variance__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Budget_Variance__c</fullName>
    <description>Difference between Earned Value and Actual Cost.  
Calculation: Earned Value - Actual Cost</description>
    <formula>inspire1__Earned_Value__c - inspire1__Actual_Cost__c</formula>
    <inlineHelpText>Difference between Earned Value and Actual Cost.  
Calculation: Earned Value - Actual Cost</inlineHelpText>
    <label>Cost Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>