force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Budget_Variance_Percent__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Budget_Variance_Percent__c</fullName>
    <description>The percentage of variance between Earned Value and Actual Cost.  
Calculation: (Earned Value - Actual Cost) / Actual Cost</description>
    <formula>IF(inspire1__Actual_Cost__c &gt; 0, 
  (inspire1__Earned_Value__c - inspire1__Actual_Cost__c) / inspire1__Actual_Cost__c,
  0
)</formula>
    <inlineHelpText>The percentage of variance between Earned Value and Actual Cost.  
Calculation: (Earned Value - Actual Cost) / Actual Cost</inlineHelpText>
    <label>Cost Variance %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>