force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Budgeted_Cost__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Budgeted_Cost__c</fullName>
    <description>Total Budgeted Cost of Project.  Roll up of all Project Tasks.</description>
    <inlineHelpText>Total Budgeted Cost of Project.  Roll up of all Project Tasks.</inlineHelpText>
    <label>Budgeted Cost</label>
    <summarizedField>inspire1__Project_Tasks__c.inspire1__Budgeted_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryForeignKey>inspire1__Project_Tasks__c.inspire1__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>