force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Chatter_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Chatter_Group_Id__c</fullName>
    <label>Chatter Group ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>