force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Complete__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Complete__c</fullName>
    <formula>IF( AND(inspire1__Total_Tasks_Rollup__c &gt; 0, OR(inspire1__Duration_Complete_Day_Unit_Tasks__c &gt; 0, inspire1__Duration_Complete_Hour_Unit_Tasks__c &gt; 0)),

(

IF( 

OR( ISNULL(inspire1__Total_Hours_for_Workday__c), inspire1__Total_Hours_for_Workday__c == 0),

(( inspire1__Duration_Complete_Day_Unit_Tasks__c + ( inspire1__Duration_Complete_Hour_Unit_Tasks__c / 8)) / 
(  inspire1__Total_Duration_in_Days__c  + ( inspire1__Total_Duration_Hour_Unit_Tasks__c / 8 ))),

 
(( inspire1__Duration_Complete_Day_Unit_Tasks__c + ( inspire1__Duration_Complete_Hour_Unit_Tasks__c / inspire1__Total_Hours_for_Workday__c )) / 
( inspire1__Total_Duration_in_Days__c + ( inspire1__Total_Duration_Hour_Unit_Tasks__c / inspire1__Total_Hours_for_Workday__c )))

)),

0
)</formula>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>