force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Cost_Performance_Index_CPI__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Cost_Performance_Index_CPI__c</fullName>
    <description>CPI measures the value of work completed against the actual cost. A CPI value &lt;1.0 indicates costs were higher than budgeted. CPI &gt;1.0 indicates costs were less than budgeted.  Calculation: Earned Value / Actual Cost</description>
    <formula>IF(inspire1__Actual_Cost__c = 0, NULL, (inspire1__Earned_Value__c /  inspire1__Actual_Cost__c))</formula>
    <inlineHelpText>CPI measures the value of work completed against the actual cost. A CPI value &lt;1.0 indicates costs were higher than budgeted. CPI &gt;1.0 indicates costs were less than budgeted.  Calculation: Earned Value / Actual Cost</inlineHelpText>
    <label>Cost Performance Index (CPI)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>