force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Days_Overdue_Project__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Days_Overdue_Project__c</fullName>
    <description>Calculates how many days project is overdue.  

TODAY - Finish Date</description>
    <formula>IF(
  AND(
     TODAY() &gt;  inspire1__Actual_Finish_Date__c,
     inspire1__Complete__c &lt; 1, ISNULL( inspire1__Baseline_Finish_Date__c )),
  TODAY() - inspire1__Actual_Finish_Date__c, 
  inspire1__Actual_Finish_Date__c -  inspire1__Baseline_Finish_Date__c 
  )</formula>
    <inlineHelpText>Calculates how many days project is overdue.  

TODAY - Finish Date</inlineHelpText>
    <label>Days Overdue (Project)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>