force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Days_To_Completion__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Days_To_Completion__c</fullName>
    <description>Defines the number of remaining days till project completion.</description>
    <formula>IF(
  inspire1__Complete__c &lt; 1,
  inspire1__Actual_Finish_Date__c - TODAY(),
  0
)</formula>
    <label>Days To Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>