force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Default_User_Project_Settings__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Default_User_Project_Settings__c</fullName>
    <label>Default User Project Settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>