force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Duration_Complete_Hour_Unit_Tasks__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Duration_Complete_Hour_Unit_Tasks__c</fullName>
    <label>Duration Complete - Hour Unit Tasks</label>
    <summarizedField>inspire1__Project_Tasks__c.inspire1__Duration_Complete__c</summarizedField>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__DurationUnit__c</field>
        <operation>equals</operation>
        <value>h</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Task_Type__c</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>inspire1__Project_Tasks__c.inspire1__Time_Tracking_Only__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>inspire1__Project_Tasks__c.inspire1__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>