force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Earned_Effort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Earned_Effort__c</fullName>
    <description>The effort earned based on % Complete of Project (Total Planned Effort * % Complete)</description>
    <formula>inspire1__Total_Planned_Effort__c *  inspire1__Complete__c</formula>
    <inlineHelpText>The effort earned based on % Complete of Project (Total Planned Effort * % Complete)</inlineHelpText>
    <label>Earned Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>