force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Earned_Value__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Earned_Value__c</fullName>
    <description>Budget earned to date based on on the completion percentage of project.
Calculation: Budgeted Cost * % Complete</description>
    <formula>inspire1__Budgeted_Cost__c *  inspire1__Complete__c</formula>
    <inlineHelpText>Budget earned to date based on on the completion percentage of project.
Calculation: Budgeted Cost * % Complete</inlineHelpText>
    <label>Earned Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>