force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Editor__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Editor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures user who is currently editing the project.</description>
    <label>Editor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>