force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Effort_Variance__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Effort_Variance__c</fullName>
    <description>The difference between the Planned Effort and the Actual Effort incurred for the Project
Calculation:Earned Effort - Actual Effort</description>
    <formula>inspire1__Earned_Effort__c - inspire1__Total_Actual_Effort__c</formula>
    <inlineHelpText>The difference between the Planned Effort and the Actual Effort incurred for the Project
Calculation:Earned Effort - Actual Effort</inlineHelpText>
    <label>Effort Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>