force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Effort_Variance_Percent__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Effort_Variance_Percent__c</fullName>
    <description>The percentage of variance between Actual Effort and Planned Effort.</description>
    <formula>IF ( inspire1__Total_Actual_Effort__c &gt; 0, 
   (inspire1__Earned_Effort__c - inspire1__Total_Actual_Effort__c) / inspire1__Total_Actual_Effort__c,
   0)</formula>
    <inlineHelpText>The percentage of variance between Actual Effort and Planned Effort.</inlineHelpText>
    <label>Effort Variance %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>