force-app/main/default/objects/inspire1__Project__c/fields/inspire1__End_Work_Day__c.field-meta.xml
<CustomField>
    <fullName>inspire1__End_Work_Day__c</fullName>
    <defaultValue>&apos;17:00&apos;</defaultValue>
    <description>Captures end of workday for Projects.  Used for hourly based project tasks.</description>
    <label>End Work Day</label>
    <length>10</length>
    <type>Text</type>
</CustomField>