force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Estimated_at_Completion_EAC__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Estimated_at_Completion_EAC__c</fullName>
    <description>EAC is a forecast of how much the total project will cost.  Formula: (Budgeted Cost)/CPI</description>
    <formula>IF (inspire1__Cost_Performance_Index_CPI__c = 0,
   inspire1__Budgeted_Cost__c,
   inspire1__Budgeted_Cost__c / inspire1__Cost_Performance_Index_CPI__c)</formula>
    <inlineHelpText>EAC is a forecast of how much the total project will cost.  Formula: (Budgeted Cost)/CPI</inlineHelpText>
    <label>Estimated at Completion (EAC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>