force-app/main/default/objects/inspire1__Project__c/fields/inspire1__Exclude_from_Time_Tracker__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Exclude_from_Time_Tracker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Time Tracker</label>
    <type>Checkbox</type>
</CustomField>